--- a/javafx/src/main/resources/esgi/javafx/primary.fxml
+++ b/javafx/src/main/resources/esgi/javafx/primary.fxml
@@ -6,8 +6,9 @@
 
 <VBox alignment="CENTER" prefHeight="324.0" prefWidth="573.0" spacing="20.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esgi.javafx.PrimaryController">
    <children>
-      <Label text="Primary View" />
+      <Label alignment="TOP_LEFT" prefHeight="26.0" prefWidth="28.0" text="Label" />
       <Button fx:id="primaryButton" onAction="#switchToSecondary" text="Switch to Secondary View" />
+      <Label text="Primary View" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
