--- a/javafx/src/main/resources/esgi/javafx/graph.fxml
+++ b/javafx/src/main/resources/esgi/javafx/graph.fxml
@@ -6,11 +6,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1085.0" prefWidth="1518.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esgi.javafx.grapheController">
    <children>
-      <VBox prefHeight="814.0" prefWidth="144.0" style="-fx-background-color: #9932CC;">
+      <VBox prefHeight="948.0" prefWidth="144.0" style="-fx-background-color: #9932CC;">
          <children>
             <Button fx:id="btnProfileGraphe" mnemonicParsing="false" onAction="#switchToProfile" prefHeight="39.0" prefWidth="143.0" style="-fx-background-color: #9932CC;" text="PROFIL" />
          </children></VBox>
-      <Button fx:id="history" layoutX="424.0" layoutY="540.0" mnemonicParsing="false" onAction="#getHistorical" text="load" />
+      <Button fx:id="history" layoutX="408.0" layoutY="540.0" mnemonicParsing="false" onAction="#getHistorical" text="load" />
       <LineChart fx:id="lineChart" layoutX="153.0" layoutY="14.0" prefHeight="526.0" prefWidth="769.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
@@ -19,5 +19,10 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </LineChart>
+      <Button layoutX="479.0" layoutY="697.0" mnemonicParsing="false" text="reload" />
+      <TextField layoutX="511.0" layoutY="629.0" prefHeight="25.0" prefWidth="85.0" promptText="Bot thershold" />
+      <TextField layoutX="642.0" layoutY="629.0" prefHeight="25.0" prefWidth="85.0" promptText="Top Thershold" />
+      <DatePicker layoutX="246.0" layoutY="629.0" prefHeight="25.0" prefWidth="102.0" promptText="Begin" />
+      <DatePicker layoutX="377.0" layoutY="629.0" prefHeight="25.0" prefWidth="102.0" promptText="End" />
    </children>
 </AnchorPane>
