--- a/javafx/src/main/resources/esgi/javafx/profil.fxml
+++ b/javafx/src/main/resources/esgi/javafx/profil.fxml
@@ -16,7 +16,7 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="btnGraphProfile" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToGraphe" prefHeight="38.0" prefWidth="181.0" style="-fx-background-color: #9932CC;" text="GRAPHE" textAlignment="JUSTIFY" textFill="#f9f2f2">
+            <Button fx:id="btnGraphProfile" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToGraphe" prefHeight="38.0" prefWidth="181.0" style="-fx-background-color: #9932CC;" text="GRAPH" textAlignment="JUSTIFY" textFill="#f9f2f2">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -26,13 +26,18 @@
             </Button>
          </children>
       </VBox>
-      <Label layoutX="286.0" layoutY="38.0" text="Préférence" />
-      <Label layoutX="236.0" layoutY="95.0" text="Label" />
-      <Label layoutX="236.0" layoutY="169.0" text="Label" />
-      <Button fx:id="btngrapheG" layoutX="238.0" layoutY="335.0" mnemonicParsing="false" onAction="#switchToGraphe" text="Genereted" />
-      <TextField layoutX="236.0" layoutY="120.0" prefHeight="25.0" prefWidth="184.0" />
-      <TextField layoutX="236.0" layoutY="200.0" prefHeight="25.0" prefWidth="184.0" />
-      <TextField layoutX="236.0" layoutY="267.0" prefHeight="25.0" prefWidth="184.0" />
-      <Label layoutX="236.0" layoutY="239.0" text="Label" />
+      <Label layoutX="236.0" layoutY="43.0" text="Preference">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Label layoutX="236.0" layoutY="95.0" text="Begin date  :" />
+      <Label layoutX="238.0" layoutY="141.0" text="End date :" />
+      <Button fx:id="btngrapheG" layoutX="328.0" layoutY="281.0" mnemonicParsing="false" onAction="#switchToGraphe" text="Generate" />
+      <TextField layoutX="328.0" layoutY="173.0" prefHeight="25.0" prefWidth="184.0" />
+      <Label layoutX="234.0" layoutY="177.0" text="Bot Threshold :" />
+      <Label layoutX="233.0" layoutY="216.0" text="Top Threshold :" />
+      <TextField layoutX="328.0" layoutY="212.0" prefHeight="25.0" prefWidth="184.0" />
+      <DatePicker layoutX="329.0" layoutY="91.0" prefHeight="25.0" prefWidth="184.0" />
+      <DatePicker layoutX="329.0" layoutY="137.0" prefHeight="25.0" prefWidth="184.0" />
    </children>
 </AnchorPane>
